--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
         <activity android:name=".RegisterActivity"></activity>
         <activity android:name=".ProductosActivity" />
         <activity android:name=".CreateProductActivity" />
+        <activity android:name=".CatalogoActivity" />
+        <activity android:name=".IndexActivity" />
+
+
 
 
 
