--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,7 @@
         <activity android:name=".CreateProductActivity" />
         <activity android:name=".IndexActivity" />
         <activity android:name=".CatalogoActivity" />
+        <activity android:name=".InventarioActivity" />
 
 
 
